@@ -67,7 +67,8 @@ typedef struct
     struct pi_header header;
 
     int count;
-    char data[NUMWORDS][MAXWORDLEN];
+    char data_put[NUMWORDS][MAXWORDLEN];
+    char data_get[NUMWORDS][MAXWORDLEN];
 } PWDICT;
 
 #define PW_WORDS(x) ((x)->header.pih_numwords)
